<resources>
    <string name="app_name">小白论坛</string>
    <string name="title_activity_main5">MainActivity5</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Microsoft"><a href="http://www.baidu.com/">Microsoft</a></string>
    <string name="Office"><a href="http://www.baidu.com/">Office</a></string>
    <string name="ArcGis"><a href="http://www.baidu.com/">ArcGis</a></string>
    <string name="ENVI"><a href="http://www.baidu.com/">ENVI</a></string>
    <string name="VisualStudio"><a href="http://www.baidu.com/">"Visual Studio</a></string>
    <string name="MYSQL"><a href="http://www.baidu.com/">MYSQL</a></string>

</resources>